--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ font-family: 'Pathway Extreme', sans-serif;
 }
 .formContent {
   background:#282828;
-  padding:10px 25px 25px 25px;
+  padding:25px 25px 25px 25px;
   border-radius:10px;
   margin-top:20px;
 }
@@ -66,4 +66,18 @@ font-family: 'Pathway Extreme', sans-serif;
 }
 .formContent input[type="submit"]:hover {
   background:#d08736;
+}
+
+.videoContent {
+  background:#ffffff;
+  padding:15px 25px 15px 25px;
+  border-radius:10px;
+  margin:20px 0 0 auto;
+  float:Right;
+  color:#ce201c;
+  display:inline-block;
+}
+.videoContent img {
+  width:25px;
+  margin-right:15px;
 }
